src/objects/Account_Focal__c/Account_Focal__c.object-meta.xml
<CustomObject>
    <description>Account Focal object created for account object functionality for Bundle project.</description>
    <label>Account Focal</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Account Focal ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Focals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>