src/objects/Account_Focal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Focals</relationshipLabel>
    <relationshipName>Account_Focals_del</relationshipName>
    <type>Lookup</type>
</CustomField>