src/objects/Account_Focal__c/fields/Area_Sales_Manager_ASM__c.field-meta.xml
<CustomField>
    <fullName>Area_Sales_Manager_ASM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area Sales Manager (ASM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Focals</relationshipName>
    <type>Lookup</type>
</CustomField>