src/objects/Account_Focal__c/fields/Business_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Business_Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Escalation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Focals (Business Escalation)</relationshipLabel>
    <relationshipName>Account_Focals3</relationshipName>
    <type>Lookup</type>
</CustomField>