src/objects/Account_Focal__c/fields/BusinessFocal__c.field-meta.xml
<CustomField>
    <fullName>BusinessFocal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BusinessFocal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Focals (Business Focal)</relationshipLabel>
    <relationshipName>Account_Focals2</relationshipName>
    <type>Lookup</type>
</CustomField>