src/objects/Account_Focal__c/fields/Customer_Business_Manager_CBM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Business_Manager_CBM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Business Manager (CBM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Focals3</relationshipName>
    <type>Lookup</type>
</CustomField>