src/objects/Account_Focal__c/fields/Customer_Support_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Escalation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Escalation</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Focals (Customer Support Escalation)</relationshipLabel>
    <relationshipName>Account_Focals1</relationshipName>
    <type>Lookup</type>
</CustomField>