src/objects/Account_Focal__c/fields/Customer_Support_Focal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Focal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Focal</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account Focals</relationshipLabel>
    <relationshipName>Account_Focals</relationshipName>
    <type>Lookup</type>
</CustomField>