src/objects/Account_Focal__c/fields/Customer_Support_Manager_CSM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Manager_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Manager (CSM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Focals1</relationshipName>
    <type>Lookup</type>
</CustomField>