src/objects/Account_Focal__c/fields/Customer_Support_Project_Manager_CSPM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Support_Project_Manager_CSPM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Support Project Manager (CSPM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Focals2</relationshipName>
    <type>Lookup</type>
</CustomField>