src/objects/Account_Focal__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <description>Field added to Account Focal to hold Part Numbers for the specific Account</description>
    <label>Part Number</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>