src/objects/Account_Focal__c/fields/Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Sold_to__c</fullName>
    <label>Sold to</label>
    <length>80</length>
    <type>Text</type>
</CustomField>