src/objects/Account_Focal__c/listViews/CSM_CSPM_Focals.listView-meta.xml
<ListView>
    <fullName>CSM_CSPM_Focals</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Support_Focal__c</columns>
    <columns>Customer_Support_Escalation__c</columns>
    <columns>Business_Escalation__c</columns>
    <columns>BusinessFocal__c</columns>
    <columns>Program__c</columns>
    <columns>Sold_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>CSM/CSPM Focals</label>
    <language>en_US</language>
</ListView>